--- a/assets/css/foundation/reset.scss
+++ b/assets/css/foundation/reset.scss
@@ -10,14 +10,10 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+b, u, i, center, dl, dt, dd, ol, ul, li, form, label, legend,
+table, caption, tbody, thead, tr, th, td,
+article, aside, canvas, details,
+figure, footer, header, menu, nav, section, mark, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -25,7 +21,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -66,8 +62,8 @@ a {
   }
 }
 body {
-   background-color: $white;
-   color: #666;
+  background-color: $white;
+  color: #666;
 }
 
 // grid system
@@ -138,20 +134,13 @@ textarea {
   vertical-align: top;
 }
 
-label,
-input,
-button,
-select,
-textarea {
+label, input, button, select, textarea {
   font-size: 14px;
   font-weight: normal;
   line-height: 20px;
 }
 
-input,
-button,
-select,
-textarea {
+input, button, select, textarea {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -162,21 +151,7 @@ label {
 
 select,
 textarea,
-input[type="text"],
-input[type="password"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="week"],
-input[type="number"],
-input[type="email"],
-input[type="url"],
-input[type="search"],
-input[type="tel"],
-input[type="color"],
-.uneditable-input {
+input[type="text"], input[type="email"], input[type="search"] {
   display: inline-block;
   height: 20px;
   padding: 4px 6px;
@@ -190,9 +165,7 @@ input[type="color"],
           border-radius: 4px;
 }
 
-input,
-textarea,
-.uneditable-input {
+input, textarea{
   width: 206px;
 }
 
@@ -202,19 +175,8 @@ textarea {
 
 textarea,
 input[type="text"],
-input[type="password"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="week"],
-input[type="number"],
 input[type="email"],
-input[type="url"],
 input[type="search"],
-input[type="tel"],
-input[type="color"],
 .uneditable-input {
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -229,19 +191,8 @@ input[type="color"],
 
 textarea:focus,
 input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="time"]:focus,
-input[type="week"]:focus,
-input[type="number"]:focus,
 input[type="email"]:focus,
-input[type="url"]:focus,
 input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="color"]:focus,
 .uneditable-input:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -261,8 +212,6 @@ input[type="checkbox"] {
   line-height: normal;
 }
 
-input[type="file"],
-input[type="image"],
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
@@ -274,11 +223,7 @@ input[type="checkbox"] {
 select,
 input[type="file"] {
   height: 30px;
-  /* In IE7, the height of the select element cannot be changed by height, only font-size */
-
   *margin-top: 4px;
-  /* For IE7, add top margin to align select with labels */
-
   line-height: 30px;
 }
 
@@ -317,8 +262,7 @@ textarea::-webkit-input-placeholder {
   color: #999999;
 }
 
-radio,
-.checkbox {
+.radio, .checkbox {
   min-height: 20px;
   padding-left: 20px;
 }
