--- a/assets/css/page/inquiry.scss
+++ b/assets/css/page/inquiry.scss
@@ -12,7 +12,7 @@ $black: #000000;
             width: 100%;
             height: 40px;
             line-height: 40px;
-            margin: 0 0 10px;
+            margin: 0 0 20px;
         }
         textarea {
             width: 100%;
@@ -34,6 +34,13 @@ $black: #000000;
         transform: translateY(-50%) translateX(-50%);
         transition : all 200ms;
         table {
+            tr {
+                &:last-child {
+                    th, td {
+                        border-bottom: 1px solid #dee2e6;
+                    }
+                }
+            }
             th, td {
                 font-size: 14px;
             }
@@ -52,6 +59,7 @@ $black: #000000;
                 left: 0;
                 z-index: 10000;
                 transition: all 100ms;
+                cursor: pointer;
                 &:before, &:after {
                     content: '';
                     position: absolute;
