bootstrap・inquiry削除・最低限のレイアウト調整・不要なclass削除

--- a/assets/css/component/part.scss
+++ b/assets/css/component/part.scss
@@ -8,9 +8,7 @@ $black: #000000;
 body {
     opacity: 0;
     transition: all 300ms;
-    min-height: 100vh;
     position: relative;
-    padding-bottom: 78px;
     box-sizing: border-box;
     animation:1s linear infinite fadeout 0s;
     animation-fill-mode: forwards;
@@ -20,30 +18,24 @@ body {
     0% { opacity: 0; } 
     100% { opacity: 1;}
 }
-@media screen and (max-width: 767px) {
-  body {
-    padding-bottom: 92px;
-  }
-}
-
-.header + * {
-    margin-top: calc( 1rem + 1px + 56px + 1rem ) !important
-}
 .container {
-    max-width: 100% !important;
+    max-width: 100%;
+    margin: 30px auto;
+    padding: 0 15px;
 }
 @media screen and (max-width: 992px) {
     .container {
-        width: 100% !important;
-        max-width: 100% !important;
+        width: calc(100% - 20px);
+        max-width: 100%;
+        margin: 10px auto 0;
+        padding: 0 10px;
     }
-}
-.main_content {
-    margin: 0 auto;
 }
 
 /*btn*/
 .btn {
+    height: 40px;
+    line-height: 40px;
     &.btn-component {
         width: auto;
         border-radius: 0;
@@ -67,6 +59,22 @@ body {
         }
     }
 }
+/**
+* table
+**/
+.table {
+  width: 100%;
+  border-top: 1px solid #dee2e6;
+  border-right: 1px solid #dee2e6;
+}
+.table tr th,
+.table tr td {
+  padding: 10px;
+  border-left: 1px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
+}
+
+
 /*title*/
 .sub_content--title {
     padding: 10px;
@@ -82,9 +90,16 @@ body {
         padding: 15px 10px;
     }
 }
+/**
+* catd-content
+**/ 
+.c-card-content {
+    display: flex;
+    flex-wrap: wrap;
+}
 
-/*コンテンツ*/
 .c-card-extend {
+    width: calc( 99.9% / 3 - 30px );
     vertical-align: top;
     display: inline-block;
     padding: 0 15px 15px;
@@ -148,11 +163,12 @@ body {
 }
 @media screen and (max-width: 767px) {
     .c-card-extend {
+        width: calc( 100% / 2 - 10px );
         &:nth-child( 2n - 1 ) {
-            padding: 0 5px 15px 15px;
+            padding: 0 5px 15px;
         }
         &:nth-child( 2n - 2 ) {
-            padding: 0 15px 15px 5px;
+            padding: 0 5px 15px;
         }
     }
     .card-title {
@@ -174,6 +190,7 @@ textarea {
 }
 button.btn-primary, button.btn-back, a.btn-primary, a.btn-back, input[type="submit"].btn-primary, input[type="submit"].btn-back, span.btn-primary, span.btn-back {
     width: 230px;
+    display: inline-block;
 }
 button.btn-primary, a.btn-primary, input[type="submit"].btn-primary {
     text-decoration: none;
@@ -236,12 +253,16 @@ button.btn-primary, a.btn-primary, input[type="submit"].btn-primary {
   background-color: $l_gray;
   color: $d_gray;
   border: 1px solid $d_gray;
+  margin: 0 0 20px;
+  padding: 10px;
 }
 
 .alert-success {
     background-color: $d_gray;
     color: $l_gray;
     border: 1px solid $l_gray; 
+    margin: 0 0 20px;
+    padding: 10px;
 }
 
 /* search */
@@ -297,4 +318,11 @@ button.btn-primary, a.btn-primary, input[type="submit"].btn-primary {
             }
         }
     }
+}
+
+/**
+* utility
+**/
+.txt-center {
+    text-align: center;
 }
